# IMPACT-MRI

./: .gitignore  .gitmodules  README.md  clone_repo.txt  old_pyproject.toml  pyproject.toml  setup.cfg
experiment_results/attn_unet/: hparams.txt
experiment_results/vanilla_unet/: hparams.txt
fastmri/: _version.py
fastmri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastmri/models/: unet.py
fastmri/pl_modules/: mri_module.py
models/: __init__.py  attn_unet.py  shared_components.py  unet.py
notebooks/: 0_fastMRI_tutorial.ipynb  1_unet_tutorial.ipynb  2_attention_u_net.ipynb  2_train_unet.ipynb  3_train_attention_u_net.ipynb  3_train_attn_unet.ipynb  3_train_unet.ipynb  4_space_time_complexity_analysis.ipynb  Attention U-Net.ipynb  fastMRI_tutorial.ipynb  modified_unet_training.ipynb  train_unet.ipynb  train_unet_demo.ipynb
results/vanilla_unet/: architecture.txt
results/vanilla_unet/tb_logs/version_0/: hparams.yaml
scripts/: train_attn_unet.py  train_unet.py
ssdu/: README.md
