[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "IMPACT-MRI"
version = "1.0.0"
description = "Intelligent Machine-learning Powered Acceleration Technique for MRI"
authors = [
    "Luis Robaina <lrobaina3@gatech.edu>",
    "Chen Yan Michael Chou <cchou85@gatech.edu>"
]
readme = "README.md"
exclude = [
    ".git",
    ".github",
    ".flake8",
    ".gitignore",
    ".pre-commit-config.yaml",
]

[tool.poetry.dependencies]
python = "^3.10"
ssdu = {git = "https://github.com/byaman14/SSDU.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"
pytest = "^7.3.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
lines_after_imports = 2
lines_between_sections = 1
honor_noqa = true
skip_gitignore = true
