[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=6.3.2",
    "setuptools>=59.5.0",
    "wheel>=0.37.0",
]

[tool.poetry]
name = "IMPACT-MRI"
version = "1.0.0"
description = "Intelligent Machine-learning Powered Acceleration Technique for MRI"
authors = [
    "Luis Robaina <lrobaina3@gatech.edu>",
    "Chen Yan Michael Chou <cchou85@gatech.edu>"
]
readme = "README.md"
exclude = [
    ".git",
    ".github",
    ".flake8",
    ".gitignore",
    ".pre-commit-config.yaml",
]

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.5"
pillow = "6.2.2"


[tool.setuptools_scm]
write_to = "fastmri/_version.py"
